src/test/deca/syntax/invalid/resultats/test38_decl_method-synt.res
./src/test/deca/syntax/invalid/test38_decl_method.deca:16:4: no viable alternative at input 'fct('
